[tool.poetry]
name = "accent-calld"
version = "0.1.0"
description = ""
authors = ["Ryan Clark <ryanc@accentservices.com>"]
packages = [
    {include = "accent_calld"}
]
include = [
    "accent_calld/plugins/*/api.yml",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cheroot = "^8.5.2"
flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.8"
iso8601 = "^1.0.2"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.3"
jsonpatch = "^1.32"
kombu = "^5.0.2"
markupsafe = "^1.1.1"
marshmallow = "^3.10.0"
python-consul = "^1.1.0"
PyYAML = "^5.3.1"
requests = "^2.25.1"
stevedore = "^4.0.2"
werkzeug = "^1.0.1"
accent-lib-rest-client = {path = "../../library/accent-lib-rest-client"}
accent-amid-client = {path = "../../library/accent-amid-client"}
accent-auth-client = {path = "../../library/accent-auth-client"}
accent-bus = {path = "../../library/accent-bus"}
accent-confd-client = {path = "../../library/accent-confd-client"}
accent = {path = "../../library/accent-lib-python"}
ari = {path = "../../library/ari-py"}
swaggerpy = {path = "../../library/swagger-py"}
websockets = "^11.0.3"
websocket-client = "^1.6.4"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
dunamai = "^1.18.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]

[tool.poetry.plugins."console_scripts"]
accent-calld = "accent_calld.main:main"

[tool.poetry.plugins."accent_calld.plugins"]
adhoc_conferences = "accent_calld.plugins.adhoc_conferences.plugin:Plugin"
api = "accent_calld.plugins.api.plugin:Plugin"
applications = "accent_calld.plugins.applications.plugin:Plugin"
calls = "accent_calld.plugins.calls.plugin:Plugin"
conferences = "accent_calld.plugins.conferences.plugin:Plugin"
config = "accent_calld.plugins.config.plugin:Plugin"
dial_mobile = "accent_calld.plugins.dial_mobile.plugin:Plugin"
endpoints = "accent_calld.plugins.endpoints.plugin:Plugin"
faxes = "accent_calld.plugins.faxes.plugin:Plugin"
meetings = "accent_calld.plugins.meetings.plugin:Plugin"
parking_lots = "accent_calld.plugins.parking_lots.plugin:Plugin"
relocates = "accent_calld.plugins.relocates.plugin:Plugin"
status = "accent_calld.plugins.status.plugin:Plugin"
switchboards = "accent_calld.plugins.switchboards.plugin:Plugin"
transfers = "accent_calld.plugins.transfers.plugin:Plugin"
voicemails = "accent_calld.plugins.voicemails.plugin:Plugin"
