[project]
name = "accent-calld"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Cors>=3.0.10",
  "Flask-RESTful>=0.3.8",
  "iso8601>=1.0.2",
  "itsdangerous>=1.1.0",
  "Jinja2>=2.11.3",
  "jsonpatch~=1.32",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "marshmallow>=3.10.0",
  "python-consul>=1.1.0",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "stevedore>=5.4.1",
  "werkzeug>=1.0.1",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-bus",
  "accent-confd-client",
  "accent",
  "ari",
  "swaggerpy",
  "websockets>=11.0.3",
  "websocket-client>=1.6.4",
]

[project.scripts]
accent-calld = "accent_calld.main:main"

[project.entry-points."accent_calld.plugins"]
adhoc_conferences = "accent_calld.plugins.adhoc_conferences.plugin:Plugin"
api = "accent_calld.plugins.api.plugin:Plugin"
applications = "accent_calld.plugins.applications.plugin:Plugin"
calls = "accent_calld.plugins.calls.plugin:Plugin"
conferences = "accent_calld.plugins.conferences.plugin:Plugin"
config = "accent_calld.plugins.config.plugin:Plugin"
dial_mobile = "accent_calld.plugins.dial_mobile.plugin:Plugin"
endpoints = "accent_calld.plugins.endpoints.plugin:Plugin"
faxes = "accent_calld.plugins.faxes.plugin:Plugin"
meetings = "accent_calld.plugins.meetings.plugin:Plugin"
parking_lots = "accent_calld.plugins.parking_lots.plugin:Plugin"
relocates = "accent_calld.plugins.relocates.plugin:Plugin"
status = "accent_calld.plugins.status.plugin:Plugin"
switchboards = "accent_calld.plugins.switchboards.plugin:Plugin"
transfers = "accent_calld.plugins.transfers.plugin:Plugin"
voicemails = "accent_calld.plugins.voicemails.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-bus = { workspace = true }
accent-confd-client = { workspace = true }
accent = { workspace = true }
ari = { workspace = true }
swaggerpy = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_calld", "accent_calld/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_calld", "accent_calld/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
