[project]
name = "accent-certs"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = ["pyopenssl>=21.0.0", "cryptography>=41.0.7"]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
