[project]
name = "accent-chatd"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
  "alembic>=1.13.0,<2",
  "cheroot>=8.5.2,<9",
  "flask>=1.1.2,<2",
  "Flask-Cors>=3.0.10,<4",
  "Flask-RESTful>=0.3.8,<0.4",
  "iso8601>=0.1.13,<0.2",
  "itsdangerous>=1.1.0,<2",
  "Jinja2>=2.11.3,<3",
  "jsonpatch~=1.25",
  "kombu>=5.0.2,<6",
  "markupsafe>=1.1.1,<2",
  "marshmallow>=3.10.0,<4",
  "psycopg2>=2.8.6,<3",
  "python-consul>=1.1.0,<2",
  "python-dateutil>=2.8.1,<3",
  "PyYAML>=5.3.1,<6",
  "requests>=2.25.1,<3",
  "SQLAlchemy>=1.3.0, <1.4.0",
  "SQLAlchemy-Utils>=0.37.2,<0.38",
  "stevedore>=4.0.2,<5",
  "werkzeug>=1.0.1,<2",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-bus",
  "accent",
]

[project.scripts]
accent-chatd = "accent_chatd.main:main"
accent-chatd-init-db = "accent_chatd.init_db:main"

[project.entry-points."accent_chatd.plugins"]
api = "accent_chatd.plugins.api.plugin:Plugin"
config = "accent_chatd.plugins.config.plugin:Plugin"
presences = "accent_chatd.plugins.presences.plugin:Plugin"
rooms = "accent_chatd.plugins.rooms.plugin:Plugin"
status = "accent_chatd.plugins.status.plugin:Plugin"
teams_presence = "accent_chatd.plugins.teams_presence.plugin:Plugin"

[dependency-groups]
dev = [
  "commitizen>=3.10.0,<4",
  "dunamai>=1.18.1,<2",
  "pytest>=7.2.0,<8",
  "pytest-cov>=4.0.0,<5",
  "deptry>=0.6.4,<0.7",
  "tox>=3.25.1,<4",
]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { path = "../../library/accent-amid-client" }
accent-auth-client = { path = "../../library/accent-auth-client" }
accent-confd-client = { path = "../../library/accent-confd-client" }
accent-bus = { path = "../../library/accent-bus" }
accent = { path = "../../library/accent-lib-python" }

[tool.hatch.build.targets.sdist]
include = ["accent_chatd", "accent_chatd/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_chatd", "accent_chatd/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]

ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
  "E203", # Whitespace before ':'
  "W503", # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
