[project]
name = "accent-chatd"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.0",
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Cors>=3.0.10",
  "Flask-RESTful>=0.3.8",
  "iso8601>=1.0.2",
  "itsdangerous>=1.1.0",
  "Jinja2>=2.11.3",
  "jsonpatch~=1.25",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "marshmallow>=3.10.0",
  "psycopg",
  "python-consul>=1.1.0",
  "python-dateutil>=2.8.1",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "SQLAlchemy-Utils>=0.37.2",
  "stevedore>=5.4.1",
  "werkzeug>=1.0.1",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-bus",
  "accent",
]

[project.scripts]
accent-chatd = "accent_chatd.main:main"
accent-chatd-init-db = "accent_chatd.init_db:main"

[project.entry-points."accent_chatd.plugins"]
api = "accent_chatd.plugins.api.plugin:Plugin"
config = "accent_chatd.plugins.config.plugin:Plugin"
presences = "accent_chatd.plugins.presences.plugin:Plugin"
rooms = "accent_chatd.plugins.rooms.plugin:Plugin"
status = "accent_chatd.plugins.status.plugin:Plugin"
teams_presence = "accent_chatd.plugins.teams_presence.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-bus = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_chatd", "accent_chatd/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_chatd", "accent_chatd/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
