[project]
name = "accent-chatd"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.0",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-bus",
  "accent",
  "aio-pika>=9.5.5",
  "httpx>=0.28.1",
]

[project.scripts]
accent-chatd = "accent_chatd.main:main"
accent-chatd-init-db = "accent_chatd.init_db:main"

[project.entry-points."accent_chatd.plugins"]
api = "accent_chatd.plugins.api.plugin:Plugin"
config = "accent_chatd.plugins.config.plugin:Plugin"
presences = "accent_chatd.plugins.presences.plugin:Plugin"
rooms = "accent_chatd.plugins.rooms.plugin:Plugin"
status = "accent_chatd.plugins.status.plugin:Plugin"
teams_presence = "accent_chatd.plugins.teams_presence.plugin:Plugin"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "deptry>=0.23.0",
    "mypy>=1.15.0",
    "refurb>=2.0.0",
    "ruff>=0.9.10",
    "tox>=4.24.2",
]
test = [
    "coverage[toml]>=7.6.12",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "pytest-recording>=0.13.2",
    "respx>=0.22.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-bus = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_chatd", "accent_chatd/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_chatd", "accent_chatd/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
