[tool.poetry]
name = "accent-confd-cli"
version = "1.0"
description = ""
authors = ["Ryan Clark <ryanc@accentservices.com>"]
packages = [
    {include = "accent_confd_cli"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cliff = "^3.10.1"
pyaml = "^21.10.1"
requests = "^2.25.1"
accent-lib-rest-client = {path = "../../library/accent-lib-rest-client"}
accent-confd-client = {path = "../../library/accent-confd-client"}
accent = {path = "../../library/accent-lib-python"}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
dunamai = "^1.18.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]

[tool.poetry.plugins."console_scripts"]
accent-confd-cli = "accent_confd_cli.main:main"

[tool.poetry.plugins."accent_confd_cli.commands"]
endpoint_sip_add = "accent_confd_cli.commands.endpoint:EndpointSIPAdd"
endpoint_sip_list = "accent_confd_cli.commands.endpoint:EndpointSIPList"
endpoint_sip_template_list = "accent_confd_cli.commands.endpoint:EndpointSIPTemplateList"
user_list = "accent_confd_cli.commands.user:UserList"
