[project]
name = "accent-confd-cli"
version = "1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
  "cliff>=3.10.1,<4",
  "pyaml>=21.10.1,<22",
  "requests>=2.25.1,<3",
  "accent-lib-rest-client",
  "accent-confd-client",
  "accent",
]

[project.scripts]
accent-confd-cli = "accent_confd_cli.main:main"

[project.entry-points."accent_confd_cli.commands"]
endpoint_sip_add = "accent_confd_cli.commands.endpoint:EndpointSIPAdd"
endpoint_sip_list = "accent_confd_cli.commands.endpoint:EndpointSIPList"
endpoint_sip_template_list = "accent_confd_cli.commands.endpoint:EndpointSIPTemplateList"
user_list = "accent_confd_cli.commands.user:UserList"

[dependency-groups]
dev = [
  "commitizen>=3.10.0,<4",
  "dunamai>=1.18.1,<2",
  "pytest>=7.2.0,<8",
  "pytest-cov>=4.0.0,<5",
  "deptry>=0.6.4,<0.7",
  "tox>=3.25.1,<4",
]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-confd-client = { path = "../../library/accent-confd-client" }
accent = { path = "../../library/accent-lib-python" }

[tool.hatch.build.targets.sdist]
include = ["accent_confd_cli"]

[tool.hatch.build.targets.wheel]
include = ["accent_confd_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]

ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
  "E203", # Whitespace before ':'
  "W503", # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
