[project]
name = "accent-confd-cli"
version = "1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "cliff>=3.10.1",
  "pyaml>=21.10.1",
  "requests>=2.25.1",
  "accent-lib-rest-client",
  "accent-confd-client",
  "accent",
]

[project.scripts]
accent-confd-cli = "accent_confd_cli.main:main"

[project.entry-points."accent_confd_cli.commands"]
endpoint_sip_add = "accent_confd_cli.commands.endpoint:EndpointSIPAdd"
endpoint_sip_list = "accent_confd_cli.commands.endpoint:EndpointSIPList"
endpoint_sip_template_list = "accent_confd_cli.commands.endpoint:EndpointSIPTemplateList"
user_list = "accent_confd_cli.commands.user:UserList"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-confd-client = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_confd_cli"]

[tool.hatch.build.targets.wheel]
include = ["accent_confd_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
