[project]
name = "accent-confgend"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
    "automat>=20.2.0,<21",
    "Jinja2>=2.11.3,<3",
    "psycopg2>=2.8.6,<3",
    "PyYAML>=5.3.1,<6",
    "SQLAlchemy>=1.3.0, <1.4.0",
    "sqlalchemy-utils>=0.37.2,<0.38",
    "stevedore>=4.0.2,<5",
    "Twisted>=21.2.0,<22",
    "Unidecode>=1.2.0,<2",
    "accent",
    "accent-dao",
]

[project.scripts]
accent-confgend = "accent_confgend.bin.daemon:main"

[project.entry-points."accent_confgend.asterisk.confbridge.conf"]
accent = "accent_confgend.plugins.confbridge_conf:ConfBridgeConfGenerator"

[project.entry-points."accent_confgend.asterisk.hep.conf"]
accent = "accent_confgend.plugins.hep_conf:HEPConfGenerator"

[project.entry-points."accent_confgend.asterisk.modules.conf"]
accent = "accent_confgend.plugins.modules_conf:ModulesConfGenerator"

[project.entry-points."accent_confgend.asterisk.musiconhold.conf"]
accent = "accent_confgend.plugins.musiconhold_conf:MOHConfGenerator"

[project.entry-points."accent_confgend.asterisk.rtp.conf"]
accent = "accent_confgend.plugins.rtp_conf:RTPConfGenerator"

[project.entry-points."accent_confgend.asterisk.pjsip.conf"]
accent = "accent_confgend.plugins.pjsip_conf:PJSIPConfGenerator"

[project.entry-points."accent_confgend.provd.network.yml"]
accent = "accent_confgend.plugins.provd_conf:ProvdNetworkConfGenerator"

[project.entry-points."accent_confgend.asterisk.features.conf"]
accent = "accent_confgend.plugins.features_conf:FeaturesConfGenerator"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-cov>=4.0.0,<5",
    "deptry>=0.6.4,<0.7",
    "pre-commit>=2.20.0,<3",
    "tox>=3.25.1,<4",
]

[tool.uv.sources]
accent = { path = "../../library/accent-lib-python" }
accent-dao = { path = "../../library/accent-dao" }

[tool.hatch.build.targets.sdist]
include = ["accent_confgend"]

[tool.hatch.build.targets.wheel]
include = ["accent_confgend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["accent_confgend"]
